Added Images Folder
added imgs to the images folder and started styling the header of my resume

--- a/less/index.less
+++ b/less/index.less
@@ -57,3 +57,27 @@ html, body {
     height: 100%;
 }
 
+// variables
+@header: color(white);
+
+
+
+
+// header
+.header-box {
+	display: flex;
+	justify-content: center;
+	background-color: navy;
+	height: 25%;
+}
+
+.name-style {
+	font-size: 4em;
+	color: @header;
+	margin: .5em 0;
+}
+
+.job-style {
+	color: @header;
+	font-size: 1.5em;
+}
