--- a/less/index.less
+++ b/less/index.less
@@ -63,10 +63,10 @@ html, body {
 
 
 
-// header
+// header section
 .header-box {
 	display: flex;
-	justify-content: center;
+	justify-content: space-evenly;
 	background-color: navy;
 	height: 25%;
 }
@@ -80,4 +80,35 @@ html, body {
 .job-style {
 	color: @header;
 	font-size: 1.5em;
+}
+.profile-pic {
+	border-radius: 50%;
+	width: 10%;
+	height: 80%;
+	margin: 1em;
+	
+}
+// Resume Content
+.entire-resume {
+	height: 75%;
+	background-color: aqua;
+	display: flex;
+	justify-content: baseline;
+}
+
+
+// Profile Section
+.profile-cont {
+	height: 100%;
+	width: 40%;
+	background-color: white;
+}
+
+
+
+// Experience Section
+.experience-cont {
+	height: 100%;
+	width: 60%;
+	background-color: grey;
 }
