--- a/less/index.less
+++ b/less/index.less
@@ -4,19 +4,87 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -24,25 +92,44 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -50,65 +137,76 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+	height: 100%;
 }
 
 // variables
 @header: color(white);
+@h3Color: color(navy);
 
-
-
+// mixins
+.resume-titles {
+	color: @h3Color;
+	font-size: 2.5em;
+	border-bottom: .5em solid @h3Color;
+	margin: 1em;
+	width: 15%;
+}
 
 // header section
-.header-box {
-	display: flex;
-	justify-content: space-evenly;
-	background-color: navy;
-	height: 25%;
-}
+.container {
+	height: 100%;
 
-.name-style {
-	font-size: 4em;
-	color: @header;
-	margin: .5em 0;
-}
+	.header-box {
+		display: flex;
+		justify-content: space-evenly;
+		background-color: navy;
+		height: 25%;
+	}
 
-.job-style {
-	color: @header;
-	font-size: 1.5em;
-}
-.profile-pic {
-	border-radius: 50%;
-	width: 10%;
-	height: 80%;
-	margin: 1em;
+	.name-style {
+		font-size: 4em;
+		color: @header;
+		margin: .5em 0;
+	}
+
+	.job-style {
+		color: @header;
+		font-size: 1.5em;
+	}
+
+	.profile-pic {
+		border-radius: 50%;
+		width: 10%;
+		height: 80%;
+		margin: 1em;
+	}
+
+	// Resume Content
+	.entire-resume {
+		height: 75%;
+		background-color: aqua;
+		display: flex;
+		justify-content: baseline;
+	}
 	
-}
-// Resume Content
-.entire-resume {
-	height: 75%;
-	background-color: aqua;
-	display: flex;
-	justify-content: baseline;
-}
 
+	// Profile Section
+	.profile-cont {
+		height: 100%;
+		width: 40%;
+		background-color: white;
+	}
 
-// Profile Section
-.profile-cont {
-	height: 100%;
-	width: 40%;
-	background-color: white;
-}
-
-
-
-// Experience Section
-.experience-cont {
-	height: 100%;
-	width: 60%;
-	background-color: grey;
+	// Experience Section
+	.experience-cont {
+		height: 100%;
+		width: 60%;
+		background-color: #DCDCDC;
+	}
 }
