--- a/less/index.less
+++ b/less/index.less
@@ -157,6 +157,10 @@ body {
 	margin: 1em;
 	width: 15%;
 }
+.resume-content {
+	margin: 1em 3em ;
+	width: 40%;
+}
 
 // header section
 .container {
@@ -208,5 +212,10 @@ body {
 		height: 100%;
 		width: 60%;
 		background-color: #DCDCDC;
+	}
+
+	// Small Screen Media Querie
+	@media (max-width: 500px) {
+		height: 100%
 	}
 }
