--- a/css/index.css
+++ b/css/index.css
@@ -139,11 +139,11 @@ body {
   font-size: 2.5em;
   border-bottom: 0.5em solid #000080;
   margin: 1em;
-  width: 15%;
+  width: 3em;
 }
 .resume-content {
-  margin: 1em 3em ;
-  width: 40%;
+  margin: 1em 3em;
+  width: 30em;
 }
 .container {
   height: 100%;
@@ -154,6 +154,28 @@ body {
   background-color: navy;
   height: 25%;
 }
+@media (max-width: 500px) {
+  .container .header-box {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-items: center;
+    padding-bottom: 2em;
+  }
+}
+.container .profile-pic {
+  border-radius: 50%;
+  width: 10%;
+  height: 80%;
+  margin: 1em;
+}
+@media (max-width: 500px) {
+  .container .profile-pic {
+    width: 50%;
+  }
+}
 .container .name-style {
   font-size: 4em;
   color: #ffffff;
@@ -163,12 +185,6 @@ body {
   color: #ffffff;
   font-size: 1.5em;
 }
-.container .profile-pic {
-  border-radius: 50%;
-  width: 10%;
-  height: 80%;
-  margin: 1em;
-}
 .container .entire-resume {
   height: 75%;
   background-color: aqua;
@@ -176,12 +192,17 @@ body {
   justify-content: baseline;
 }
 .container .profile-cont {
+  display: flex;
+  flex-direction: column;
   height: 100%;
   width: 40%;
   background-color: white;
 }
 .container .experience-cont {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  align-items: baseline;
   width: 60%;
   background-color: #DCDCDC;
 }
