--- a/css/index.css
+++ b/css/index.css
@@ -185,18 +185,33 @@ body {
   color: #ffffff;
   font-size: 1.5em;
 }
+.container .small-headers {
+  font-weight: bold;
+  font-style: italic;
+  color: #000080;
+}
 .container .entire-resume {
   height: 75%;
   background-color: aqua;
   display: flex;
-  justify-content: baseline;
+  flex-wrap: wrap;
+}
+@media (max-width: 500px) {
+  .container .entire-resume {
+    width: 100%;
+    display: flex;
+  }
 }
 .container .profile-cont {
   display: flex;
   flex-direction: column;
-  height: 100%;
   width: 40%;
   background-color: white;
+}
+@media (max-width: 500px) {
+  .container .profile-cont {
+    width: 100%;
+  }
 }
 .container .experience-cont {
   display: flex;
@@ -205,4 +220,9 @@ body {
   align-items: baseline;
   width: 60%;
   background-color: #DCDCDC;
+}
+@media (max-width: 500px) {
+  .container .experience-cont {
+    width: 100%;
+  }
 }
